--- a/main.ipynb
+++ b/main.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "[5 rows x 51 columns]"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
        "[8 rows x 50 columns]"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +997,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv (3.12.11)",
    "language": "python",
    "name": "python3"
   },
@@ -1011,7 +1011,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.4"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
